--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -11,6 +11,8 @@
   "item.mccourse.fluorite_axe": "Fluorite Axe",
   "item.mccourse.fluorite_hoe": "Fluorite Hoe",
 
+  "item.mccourse.fluorite_paxel": "Fluorite Paxel",
+
 
   "block.mccourse.fluorite_block": "Fluorite Block",
 
