--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.mccourse.fluorite_hoe": "Fluorite Hoe",
 
   "item.mccourse.fluorite_paxel": "Fluorite Paxel",
+  "item.mccourse.fluorite_hammer": "Fluorite Hammer",
 
 
   "block.mccourse.fluorite_block": "Fluorite Block",
