--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -14,6 +14,10 @@
   "item.mccourse.fluorite_paxel": "Fluorite Paxel",
   "item.mccourse.fluorite_hammer": "Fluorite Hammer",
 
+  "item.mccourse.fluorite_helmet": "Fluorite Helmet",
+  "item.mccourse.fluorite_chestplate": "Fluorite Chestplate",
+  "item.mccourse.fluorite_leggings": "Fluorite Leggings",
+  "item.mccourse.fluorite_boots": "Fluorite Boots",
 
   "block.mccourse.fluorite_block": "Fluorite Block",
 
