--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -19,6 +19,8 @@
   "item.mccourse.fluorite_leggings": "Fluorite Leggings",
   "item.mccourse.fluorite_boots": "Fluorite Boots",
 
+  "item.mccourse.fluorite_horse_armor": "Fluorite Horse Armor",
+
 
   "block.mccourse.fluorite_block": "Fluorite Block",
 
