custom armor trims

--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -20,6 +20,7 @@
   "item.mccourse.fluorite_boots": "Fluorite Boots",
 
   "item.mccourse.fluorite_horse_armor": "Fluorite Horse Armor",
+  "item.mccourse.kaupen_armor_trim_smithing_template": "Kaupen Smithing Template",
 
 
   "block.mccourse.fluorite_block": "Fluorite Block",
@@ -51,5 +52,8 @@
   "tooltip.mccourse.chainsaw.tooltip.2": "§oChainsaw go vrooom!§r",
 
   "tooltip.mccourse.magic_block.tooltip.1": "This block is §9magical§r!",
-  "tooltip.mccourse.strawberry.tooltip.1": "Tastes great!"
+  "tooltip.mccourse.strawberry.tooltip.1": "Tastes great!",
+
+  "trim_material.mccourse.fluorite": "Fluorite Material",
+  "trim_pattern.mccourse.kaupen": "Kaupen Armor Pattern"
 }
